--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body {
 }
 
 .container {
-  height: 35vh;
-  width: 40vh;
+  /*height: 35vh;
+  width: 40vh;*/
   display: flex;
   justify-content: center;
   align-items: center;
