--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,9 @@ li {
   font-weight: bold;
   margin-bottom: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+  .tasks-container {
+    margin-left: 28px;
+  }
+}
